surf-paddle-co.css
html * {
	vertical-align: top;
}

body {
	margin: 0 auto;
    padding: 0;
}

.container {
	width: 1000px;
	margin: 0 auto;
	position: relative;
}

a, a:visited {
	color: #a8a8a8;
	text-decoration: none;
}

a:hover {
	color:#1673bb;
	text-decoration: underline;
}

h1 {
	padding-top: 140px;
	text-align:center;
	text-transform: uppercase;
	margin: 0 auto;
	margin-bottom: -13px;
	font-family: 'Oswald', sans-serif;
	font-size: 83px;
	letter-spacing: 3px;
	color: #FFFFFF;
}

h2 {
	margin: 0 auto;
	text-align:center;
	font-family: 'Asap', sans-serif;
	font-size: 17px;
	color:#083451;
}

.header-whole {
	padding-top: 8px;
	background: url('images/tophead-big.png') no-repeat;
	background-size: cover;
	box-shadow: inset 0px 0px 0 2000px rgba(17,117,192,0.8);
	height: 515px;
	width: 100%;
	position: relative;
}

.header-whole h3 {
	display: inline-block;
	margin-left: 11px;
	margin-top: 14px;
	left: 0;
	font-family: 'Oswald', sans-serif;
	font-size: 15px;
	color:#083451;
}

.wave-logo {
	margin-top: 3px;
	height: 50px;
	width: 50px;
}

.header-whole ul {
	margin-top: 9px;
	display: inline-block;
	position: absolute;
	right: 0;
	list-style-type: none;
	font-family: 'Oswald', sans-serif;
	font-size: 18px;
	color:#083451;
}

.header-whole ul li{
	display: inline-block;
	color: #083452;
}

.magglass {
	margin-top: 4px;
	height: 21px;
}

.pic-and-byline p {
	display: inline-block;
	font-family: 'Asap', sans-serif;
	font-size: 15px;
	line-height: 30px;
	color:#1673bb;
	margin: 0 auto;
}

.pic-and-byline a, .pic-and-byline a:visited {
	display: inline-block;
	font-family: 'Asap', sans-serif;
	font-size: 15px;
	line-height: 30px;
	color: #a8a8a8;
	margin: 0 auto;
}

.pic-and-byline a:hover {
	display: inline-block;
	font-family: 'Asap', sans-serif;
	font-size: 15px;
	line-height: 30px;
	color:#1673bb;
	text-decoration: underline;
	margin: 0 auto;
}

.pic-and-byline span {
	font-family: 'Asap', sans-serif;
	font-size: 15px;
	line-height: 30px;
	color:#a8a8a8;
	margin: 0 auto;}

.body-text {
	display: inline-block;
	width: 657px;
	color: #555555;
}

.body-text h3 {
	font-family: 'Oswald', sans-serif;
	text-transform: uppercase;
	font-size: 69px;
	line-height: 78px;
	color: #083452;
}

.body-text blockquote {
	font-family: 'Asap', sans-serif;
	text-transform: uppercase;
	font-size: 31px;
	line-height: 78px;
	color:#1673bb;
	top: 10px;
  	margin-bottom: 10px;
  	margin-left: 50px;
  	padding-left: 15px;
  	border-left: 3px solid #ccc;
}

.copyblock {
	display: inline-block;
	font-family: 'Asap', sans-serif;
	font-size: 19px;
	line-height: 30px;
	color: #555555;
}

.sidebar-right {
	float: right;
	display: inline-block;
	width: 278px;
	text-align:left;
	list-style-type: none;
	font-family: 'Asap', sans-serif;
	text-align: center;
	color: #a8a8a8;
}

.round-pic {
	height: 95px;
	width: 95px;
	padding-top: 92px;
	padding-left: 50px;
	padding-right: 50px;
	padding-bottom: 6px;
	text-align: center;
	padding-bottom: 10px;
}

.social-media ul, li, .social-media p {
	display: inline-block;
	margin: 0 auto;
	padding-left: 0;
	padding-right: 0;
	padding-bottom: 10px;
	list-style-type: none;
	color: #1673bb;
}

.social-media p{
	color: #083451;
}

.sidebar-about-this-ad {
	font-family: 'Asap', sans-serif;
	text-align:right;
	float: right;
}

.sidebar-about-this-ad a {
	position: absolute;
	right: 0;ly y
}


.sidebar-text {
	text-align: left;
}


.sidebar-section-head {
	font-family: 'Oswald', sans-serif;
	text-transform: uppercase;
	color:#1673bb;
}

.sidebar-section-text {
	font-family: 'Asap', sans-serif;
	color: #a8a8a8;
}

.horiz-rule {
    min-height: 1px;
    clear:both; width:100%;
    border-bottom:1px solid #d1d1d1;
    height:1px; padding-top:5px;
    margin-top:50px;
    margin-bottom:50px;
}

.most-pop {
	font-family: 'Oswald', sans-serif;
	text-transform: uppercase;
	text-align: center;
	font-size: 69px;
	line-height: 69px;
	margin: 0 auto;
	color: #083452;
}

.most-pop-pics img{
	display: inline-block;
	position:relative;
	float: left;
	width: 25%;
}

.footer-box {
	background: #083452;
	height: 425px;
	width: 100%;
	color: #a8a8a8;
	font-family: 'Asap', sans-serif;
}

.footer-text1 p {
	margin: 0 auto;
	float: left;
	display: inline-block;
}

.footer-text2 ul li {
	float: right;
	list-style-type: none;
}

